--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,14 +1,18 @@
 /* Stylin */
 
 html, body {
-  background: #e8e8e8;
+  background: #fff;
 }
 
 /* main */
 
 .main {
-  width: 100%;
-  height: 100%;
-  background: #e8e8e8;
-  color: #222;
+  width: 80%;
+  margin: auto;
+  color: #444;
+}
+
+.main th, .main td {
+  border: #eee 2px solid;
+  padding: 5px 10px;
 }
