--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -25,6 +25,14 @@ h1 {
   padding: 5px 10px;
 }
 
+td.boolean {
+  text-align: center;
+}
+
+td.boolean .glyphicon-ok {
+  color: #666;
+}
+
 .main tr:hover td {
   background-color: #fafafa;
 }
